enum AccountType { MEMBER, MEMBER_EMPLOYEE, EMPLOYEE, ADMIN }
